--- a/src/main/resources/templates/customer-order-confirmation.html
+++ b/src/main/resources/templates/customer-order-confirmation.html
@@ -307,17 +307,17 @@
         </div>
         <hr>
         <div class="greetings-section">
-            <span>We hope to welcome you back to www.urchef.co.uk soon!</span>
+            <span>We hope to welcome you back to www.chumma.co.uk soon!</span>
             <p>
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The UrChef Team
+                The Chumma Team
             </p>
         </div>
         <div class="footer-section">
             <p>
-                ©2022-2023 UrChef Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2025 Chumma Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
