--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -321,17 +321,17 @@
             <hr>
         </div>
         <div class="greetings-section">
-            <span>We hope to welcome you back to www.firstbites.co.uk soon!</span>
+            <span>We hope to welcome you back to www.chumma.co.uk soon!</span>
             <p>
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The #FirstBites Team
+                The Chumma Team
             </p>
         </div>
         <div class="footer-section">
             <p>
-                ©2023-2024 #FirstBites Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2024 Chumma Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
