Add new changes

--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -6,6 +6,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link th:href="@{/css/email.css}" rel="stylesheet" />
     <style type="text/css">
         body,
         table,
@@ -50,33 +54,37 @@
         }
 
         .banner {
-            height: 100px;
-            background-color: #168a71;
-            padding: 10px;
+            height: 50px;
+            line-height: 50px;
+            padding: 10px 0;
             width: 600px;
             margin: auto;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-family: "Bebas Neue", sans-serif;
+            font-size: 30px;
+            color: #FF3333;
+            font-weight: 900;
+        }
+        .order-header{
+            padding: 10px 0;
+            font-size: 20px;
+            color: #222;
+            font-weight: 900;
+            border-bottom: 1px solid #f2f2f2;
         }
 
-        .confirmation-summary {
+        .order-details {
             font-size: 16px;
             font-weight: 400;
             line-height: 24px;
-            padding-top: 10px;
+            padding: 10px 0;
+            border-bottom: 1px solid #f2f2f2;
         }
 
-        .order-confirmation-header {
-            font-size: 16px;
-            font-weight: 800;
-            line-height: 24px;
-            padding: 10px;
-            background-color: #e7e7e7;
-        }
-
-        .items-section {
-            padding: 10px;
-            border-top: 3px solid #eeeeee;
-            border-bottom: 3px solid #eeeeee;
+        .supplier-section{
+            border-bottom: 1px solid #f2f2f2;
+            padding: 20px 0;
+            display:flex;
+            flex-direction: column;
         }
 
         .items-row {
@@ -91,7 +99,6 @@
 
         .item {
             line-height: 10px;
-            padding: 5px 0;
         }
 
         .summary-item-row {
@@ -104,20 +111,20 @@
         }
 
         .total-section {
-            padding: 10px;
+            padding: 5px 10px;
             width: 100%;
         }
 
         .delivery-date-section {
-            padding: 10px 0;
+            padding: 5px 0;
         }
 
         .greetings-section {
-            margin-top: 30px;
+            margin-top: 5px;
         }
 
         .footer-section {
-            margin-top: 40px;
+            margin-top: 20px;
             font-size: small;
         }
 
@@ -144,97 +151,98 @@
             margin: 0 !important;
         }
     </style>
-
-<body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
+</head>
+<body style="margin: 0 !important; padding: 0 !important;" >
     <div class="main-body">
         <div class="banner">
-            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">BigTree
-            </h1>
+            <span>VERA</span>
+            <span>LEVEL</span>
         </div>
-        <div align="center"
-            style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 25px;">
-            <img src="https://img.icons8.com/carbon-copy/100/000000/checked-checkbox.png" width="125" height="120"
-                style="display: block; border: 0px;" /><br>
-            <h2 style="font-size: 30px; font-weight: 800; line-height: 36px; color: #333333; margin: 0;"> Thank You For
-                Your Order! </h2>
+        <div class="order-header">
+            <span>Your Order #<span th:utext="${order.reference}"></span> is <span th:utext="${status}"></span></span>
         </div>
-        <div align="center" class="confirmation-summary">
-            <p style="font-size: 16px; font-weight: 400; line-height: 24px; color: #4b4848;"> Thanks for your order.
-                We’ll let you know once your order confirmed by your Chef. You will receive another email from us
-                confirming your order.
-                You can view the status of your order by visiting Your Orders on www.firstbites.co.uk
+
+        <div align="center" class="order-details">
+            <p>
+                <span th:utext="${message}"></span>
             </p>
         </div>
-        <div class="order-confirmation-header">
-            <span>Your Order #<span th:utext="${order.reference}"></span></span>
-        </div>
-        <hr>
-        <div>
-            <table style="height: 40px;">
-                <tr>
-                    <td style="height: 60px;width:60px;"><img th:src="${supplier.image}" width="100%" height="100%"
-                            loading="lazy" style="object-fit: cover;"></td>
-                    <td width="80%" style="padding: 0 10px;">
-                        <div>
-                            <span style="font-weight: 600;font-size: 20px;" th:utext="${supplier.name}"></span><br>
-                            <div>
-                                <span th:utext="${supplier.address.addressLine1}"
-                                    th:if="${supplier.address.addressLine1} != null"
-                                    style="font-weight: 300;font-size: 12px;"></span>,
-                                <span th:utext="${supplier.address.addressLine2}" style="font-weight: 300;font-size: 12px;"
-                                    th:if="${supplier.address.addressLine2} != null"></span>,
-                                <span th:utext="${supplier.address.city}" th:if="${supplier.address.city} != null"
-                                    style="font-weight: 300;font-size: 12px;"></span>,
-                                <span th:utext="${supplier.address.country}" style="font-weight: 300;font-size: 12px;"
-                                    th:if="${supplier.address.country} != null"></span>,
-                                <span th:utext="${supplier.address.postcode}" style="font-weight: 300;font-size: 12px;"
-                                    th:if="${supplier.address.postcode} != null"></span><br>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-
-        </div>
-        <hr>
-        <div th:each="item: ${items}">
-            <div style="display: flex;justify-content: space-between;width: 100%;padding: 1px 0;">
-                <div style="width: 60px;height: 60px;">
-                    <img th:src="${item.image}" width="100%" height="100%" loading="lazy" style="object-fit: cover;">
-                </div>
-                <div style="width: 100%;">
-                    <table cellspacing="0" cellpadding="0" border="0" width="100% ">
-                        <tr width="100%" class="summary-item-row">
-                            <td width="5%" align="left"><span style="width: 5%;padding: 0 10px;font-weight: 600;"
-                                    th:utext="${item.quantity}"></span></td>
-                            <td width="90%"><span style="font-weight: 600;" th:utext="${item.name}"></span></td>
-                            <td width="5%" align="right" style="font-weight: 600;"><span
-                                    tyle="font-weight: 600;width: 5%;padding: 0 10px;" th:remove="tag"
-                                    th:text="${#numbers.formatCurrency(item.price)}"></span></td>
-                        </tr>
-                        <tr width="100%" class="summary-item-row" th:if="${item.choice != null}">
-                            <td width="5%" align="left"><span style="font-weight: 300;padding: 0 10px;"
-                                    th:utext="${item.choice.quantity}"></span></td>
-                            <td width="90%"><span style="font-weight: 300;" th:utext="${item.choice.name}"></span></td>
-                            <td width="5%" align="right"><span th:remove="tag" style="font-weight: 300;"
-                                    th:text="${#numbers.formatCurrency(item.choice.price)}"></span></td>
-                        </tr>
-                        <tr width="100%" class="summary-item-row"
-                            th:if="${item.extras != null  && item.extras.size > 0}">
-                        <tr th:each="extra: ${item.extras}">
-                            <td width="5%" align="left"><span style="font-weight: 300;padding: 0 10px;"
-                                    th:utext="${extra.quantity}"></span></td>
-                            <td width="90%"><span style="font-weight: 300;" th:utext="${extra.name}"></span></td>
-                            <td width="5%" align="right"><span style="font-weight: 300;" th:remove="tag"
-                                    th:text="${#numbers.formatCurrency(extra.price)}"></span></td>
-                        </tr>
-                        </tr>
-                    </table>
-                </div>
+        <div style="border-bottom: 1px solid #e2e2e2;padding:5px 0;margin-bottom:5px;">
+            <div>
+                <span style="font-weight: 600;font-size: 20px;padding:10px 0;" th:utext="${supplier.name}"></span>
+            </div>
+            <div>
+                <span th:utext="${supplier.address.addressLine1}" th:if="${supplier.address.addressLine1} != null"></span>,
+                <span th:utext="${supplier.address.addressLine2}" th:if="${supplier.address.addressLine2} != null"></span>,
+                <span th:utext="${supplier.address.city}" th:if="${supplier.address.city} != null"></span>,
+                <span th:utext="${supplier.address.country}" th:if="${supplier.address.country} != null"></span>,
+                <span th:utext="${supplier.address.postcode}" th:if="${supplier.address.postcode} != null"></span><br>
             </div>
         </div>
-        <hr>
-        <div class="items-section">
+        <div th:each="item: ${items}" style="border-bottom: 1px solid #e2e2e2;padding:3px 0;">
+            <div style="width: 100%;">
+                <table cellspacing="0" cellpadding="0" border="0" width="100% ">
+                    <tr width="100%" class="summary-item-row">
+                        <td width="5%" align="left"><span style="width: 5%;padding: 0 10px;font-weight: 600;"
+                                                          th:utext="${item.quantity}"></span></td>
+                        <td width="90%"><span style="font-weight: 600;" th:utext="${item.name}"></span></td>
+                        <td width="5%" align="right" style="font-weight: 600;"><span
+                                tyle="font-weight: 600;width: 5%;padding: 0 10px;" th:remove="tag"
+                                th:text="${#numbers.formatCurrency(item.price)}"></span></td>
+                    </tr>
+                    <tr width="100%" class="summary-item-row" th:if="${item.choice != null}">
+                        <td width="5%" align="left"><span style="font-weight: 300;padding: 0 10px;"
+                                                          th:utext="${item.choice.quantity}"></span></td>
+                        <td width="90%"><span style="font-weight: 300;" th:utext="${item.choice.name}"></span></td>
+                        <td width="5%" align="right"><span th:remove="tag" style="font-weight: 300;"
+                                                           th:text="${#numbers.formatCurrency(item.choice.price)}"></span></td>
+                    </tr>
+                    <tr width="100%" class="summary-item-row"
+                        th:if="${item.extras != null  && item.extras.size > 0}">
+                    <tr th:each="extra: ${item.extras}">
+                        <td width="5%" align="left"><span style="font-weight: 300;padding: 0 10px;"
+                                                          th:utext="${extra.quantity}"></span></td>
+                        <td width="90%"><span style="font-weight: 300;" th:utext="${extra.name}"></span></td>
+                        <td width="5%" align="right"><span style="font-weight: 300;" th:remove="tag"
+                                                           th:text="${#numbers.formatCurrency(extra.price)}"></span></td>
+                    </tr>
+                </table>
+            </div>
+<!--            <div style="display: flex;justify-content: space-between;width: 100%;">-->
+<!--                <div style="width: 60px;height: 60px;">-->
+<!--                    <img th:src="${item.image}" width="100%" height="100%" loading="lazy" style="object-fit: cover;">-->
+<!--                </div>-->
+<!--                <div style="width: 100%;">-->
+<!--                    <table cellspacing="0" cellpadding="0" border="0" width="100% ">-->
+<!--                        <tr width="100%" class="summary-item-row">-->
+<!--                            <td width="5%" align="left"><span style="width: 5%;padding: 0 10px;font-weight: 600;"-->
+<!--                                    th:utext="${item.quantity}"></span></td>-->
+<!--                            <td width="90%"><span style="font-weight: 600;" th:utext="${item.name}"></span></td>-->
+<!--                            <td width="5%" align="right" style="font-weight: 600;"><span-->
+<!--                                    tyle="font-weight: 600;width: 5%;padding: 0 10px;" th:remove="tag"-->
+<!--                                    th:text="${#numbers.formatCurrency(item.price)}"></span></td>-->
+<!--                        </tr>-->
+<!--                        <tr width="100%" class="summary-item-row" th:if="${item.choice != null}">-->
+<!--                            <td width="5%" align="left"><span style="font-weight: 300;padding: 0 10px;"-->
+<!--                                    th:utext="${item.choice.quantity}"></span></td>-->
+<!--                            <td width="90%"><span style="font-weight: 300;" th:utext="${item.choice.name}"></span></td>-->
+<!--                            <td width="5%" align="right"><span th:remove="tag" style="font-weight: 300;"-->
+<!--                                    th:text="${#numbers.formatCurrency(item.choice.price)}"></span></td>-->
+<!--                        </tr>-->
+<!--                        <tr width="100%" class="summary-item-row"-->
+<!--                            th:if="${item.extras != null  && item.extras.size > 0}">-->
+<!--                        <tr th:each="extra: ${item.extras}">-->
+<!--                            <td width="5%" align="left"><span style="font-weight: 300;padding: 0 10px;"-->
+<!--                                    th:utext="${extra.quantity}"></span></td>-->
+<!--                            <td width="90%"><span style="font-weight: 300;" th:utext="${extra.name}"></span></td>-->
+<!--                            <td width="5%" align="right"><span style="font-weight: 300;" th:remove="tag"-->
+<!--                                    th:text="${#numbers.formatCurrency(extra.price)}"></span></td>-->
+<!--                        </tr>-->
+<!--                    </table>-->
+<!--                </div>-->
+<!--            </div>-->
+        </div>
+        <div style="border-bottom: 1px solid #e2e2e2;margin:3px 0;">
             <table cellspacing="0" cellpadding="0" border="0" width="100% ">
                 <tr width="100%" class="summary-item-row">
                     <td width="75% " align="left " class="summary-item-name">Sub Total</td>
@@ -258,8 +266,8 @@
                 </tr>
             </table>
         </div>
-        <hr>
-        <div class="items-section">
+
+        <div>
             <table cellspacing="0 " cellpadding="0 " border="0 " width="100% ">
                 <tr width="100%" class="summary-item-row">
                     <td width="75% " align="left " class="summary-item-name" style="font-weight: bold;">TOTAL</td>
@@ -268,8 +276,7 @@
                 </tr>
             </table>
         </div>
-        <hr>
-        <div class="delivery-address-section" th:if="${order.serviceMode == 'DELIVERY'}">
+        <div style="background: #dbf3fa;padding:5px 10px;margin:5px 0;border-radius:5px" th:if="${serviceMode == 'DELIVERY'}">
             <p style="font-weight: 800; ">Delivery Address</p>
             <p>
             <div th:if="${customer.address.addressLine1} != null">
@@ -290,16 +297,16 @@
             </p>
             <hr>
         </div>
-
-        <div class="delivery-date-section" th:if="${order.serviceMode == 'DELIVERY'}">
+        <div style="padding:5p 0x;margin:5px 0;" th:if="${serviceMode == 'DELIVERY'}">
             <span style="font-weight: 800;margin-right: 10px; ">Estimated Delivery</span>: <span
                 th:utext="${#temporals.format(order.expectedDeliveryDate, 'dd MMM yyyy')}"></span>
             <hr>
         </div>
-        <div class="delivery-date-section" th:if="${order.serviceMode == 'COLLECTION'}">
-            <span style="font-weight: 800;margin-right: 10px; display: block;">Collect by</span>: <span
-                th:utext="${#temporals.format(order.collectBy, 'dd MMM yyyy')}"></span>
-            <hr>
+        <div th:if="${order.collectionDate}" style="background: #dbf3fa;padding:5px;margin:5px 0;border-radius:3px">
+            <span style="font-weight: 800;margin-right: 10px; display: block;" >Collection Date </span>: <span
+                th:utext="${#temporals.format(order.collectionDate, 'dd MMM yyyy')}"></span>
+        </div>
+        <div style="background: #dbf3fa;padding:5px 10px;margin:5px 0;border-radius:6px" th:if="${serviceMode == 'COLLECTION'}">
             <p style="font-weight: 800; ">Collect At</p>
             <p>
             <div th:if="${supplier.address.addressLine1} != null">
@@ -318,20 +325,36 @@
                 <span th:utext="${supplier.address.postcode}"></span><br>
             </div>
             </p>
-            <hr>
         </div>
-        <div class="greetings-section">
-            <span>We hope to welcome you back to www.chumma.co.uk soon!</span>
+        <div style="margin: 10px 0;"  th:if="${linkUrl} != null">
+            <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
+                <tr>
+                    <td align="center">
+                        <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
+                            <tr>
+                                <td align="center">
+<!--                                    <a th:href="@{http://localhost:4200/make_payment?intent={qs}(qs = ${paymentIntentId})}" class="f-fallback button button&#45;&#45;green" target="_blank">Make Payment</a>-->
+                                    <a th:href="${linkUrl}" class="f-fallback button button--green" target="_blank">${linkText}</a>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+        <div style="padding:5p 0x;margin:5px 0;">
+            <span>We hope to welcome you back to www.zuvai.co.uk soon!</span>
             <p>
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The Chumma Team
+                The Zuvai Team
             </p>
         </div>
-        <div class="footer-section">
+        <div style="padding:5p 0x;margin:5px 0;">
             <p>
-                ©2024-2024 Chumma Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2024 Zuvai Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
