--- a/src/main/resources/templates/payment-link.html
+++ b/src/main/resources/templates/payment-link.html
@@ -48,6 +48,15 @@
             width: 600px;
             margin: auto;
         }
+        .button{
+            border: 1px solid #333;
+            border-radius: 6px;
+            padding: 10px 20px;
+            font-size:16px;
+            font-weight: 500;
+            text-align: center;
+            background: #5bc0de;
+        }
 
         .banner {
             height: 100px;
