--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link th:href="@{/css/email.css}" rel="stylesheet" />
     <style type="text/css">
         body,
         table,
@@ -155,8 +154,7 @@
 <body style="margin: 0 !important; padding: 0 !important;" >
     <div class="main-body">
         <div class="banner">
-            <span>VERA</span>
-            <span>LEVEL</span>
+            <span>DESI TIMES</span>
         </div>
         <div class="order-header">
             <span>Your Order #<span th:utext="${order.reference}"></span> is <span th:utext="${status}"></span></span>
