--- a/src/main/resources/templates/make-payment.html
+++ b/src/main/resources/templates/make-payment.html
@@ -158,7 +158,7 @@
 <body style="margin: 0 !important; padding: 0 !important;" >
 <div class="main-body">
     <div class="banner">
-        <h4>ZUVAI</h4>
+        <h4>DESI TIMES</h4>
     </div>
     <div class="order-confirmation-header">
         <span>Your Order #<span th:utext="${order.reference}"></span> has been accepted</span>
