--- a/src/main/resources/templates/order-update.html
+++ b/src/main/resources/templates/order-update.html
@@ -148,7 +148,7 @@
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
     <div class="main-body">
         <div class="banner">
-            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">Chumma
+            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">DESI TIMES
             </h1>
         </div>
         <div align="center"
@@ -317,17 +317,17 @@
             <hr>
         </div>
         <div class="greetings-section">
-            <span>We hope to welcome you back to www.chumma.co.uk soon!</span>
+            <span>We hope to welcome you back to www.desitimes.co.uk soon!</span>
             <p>
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The Chumma Team
+                The desitimes Team
             </p>
         </div>
         <div class="footer-section">
             <p>
-                ©2024-2024 Chumma Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2024 desitimes Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
