--- a/src/main/resources/templates/payment-link.html
+++ b/src/main/resources/templates/payment-link.html
@@ -157,7 +157,7 @@
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
     <div class="main-body">
         <div class="banner">
-            <h1 style="font-size:20px; font-weight: 200; margin: 0; line-height: 100px;color: red;">ZUVAI
+            <h1 style="font-size:20px; font-weight: 200; margin: 0; line-height: 100px;color: red;">DESI TIMES
             </h1>
         </div>
         <div style="font-size: 18px;padding: 10px;font-weight: 600; line-height: 20px;text-align: left;color: #212121;">
