--- a/src/main/resources/templates/customer-order-confirmation.html
+++ b/src/main/resources/templates/customer-order-confirmation.html
@@ -307,17 +307,17 @@
         </div>
         <hr>
         <div class="greetings-section">
-            <span>We hope to welcome you back to www.desitimes.co.uk soon!</span>
+            <span>We hope to welcome you back to www.desify.co.uk soon!</span>
             <p>
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The desitimes Team
+                The Desify Team
             </p>
         </div>
         <div class="footer-section">
             <p>
-                ©2024-2025 desitimes Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2025 Desify Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
