--- a/src/main/resources/templates/payment-link.html
+++ b/src/main/resources/templates/payment-link.html
@@ -335,7 +335,7 @@
         </div>
         <div style="margin-top:50px;border-top:1px solid #f1f1f1;color: #d3d3d3;padding:20px 0;text-align:left;">
             <div>
-                © 2023 Zuvai Limited. All Rights Reserved
+                © 2023 Desify Limited. All Rights Reserved
                 <br>
                 359, Glasgow Road, Glasgow, G760HE +44 141 644 0955
             </div>
