--- a/src/main/resources/templates/make-payment.html
+++ b/src/main/resources/templates/make-payment.html
@@ -168,11 +168,11 @@
             We have submitted your order to your Chef. <br>
             We’ll let you know once your order confirmed by your Chef. You will receive another email from us
             with link to make payment.<br>
-            You can view the status of your order anytime by visiting on www.zuvai.co.uk/my_orders
+            You can view the status of your order anytime by visiting on www.desify.co.uk/my_orders
         </p>
         <p th:if="${status == 'DRAFT'}" style="font-size: 16px; font-weight: 400; line-height: 24px; color: #4b4848;">
             Your order still in Draft state. Please submit your order.
-            You can view the status of your order anytime by visiting on www.zuvai.co.uk/my_orders
+            You can view the status of your order anytime by visiting on www.desify.co.uk/my_orders
         </p>
     </div>
     <hr>
@@ -339,17 +339,17 @@
         </tr>
     </table>
     <div class="greetings-section">
-        <span>We hope to welcome you back to www.zuvai.co.uk soon!</span>
+        <span>We hope to welcome you back to www.desify.co.uk soon!</span>
         <p>
             Best Regards,
         </p>
         <p style="font-style: italic;">
-            The Zuvai Team
+            The Desify Team
         </p>
     </div>
     <div class="footer-section">
         <p>
-            ©2024-2024 Zuvai Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+            ©2024-2024 Desify Ltd. Registered in Scotland. #SC595168. VAT No #295285756
         </p>
     </div>
 </div>
