--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -342,17 +342,17 @@
         </div>
 
         <div style="padding:5p 0x;margin:5px 0;">
-            <span>We hope to welcome you back to www.zuvai.co.uk soon!</span>
+            <span>We hope to welcome you back to www.desify.co.uk soon!</span>
             <p>
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The Zuvai Team
+                The Desify Team
             </p>
         </div>
         <div style="padding:5p 0x;margin:5px 0;">
             <p>
-                ©2024-2024 Zuvai Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2024 Desify Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
