--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -154,7 +154,7 @@
 <body style="margin: 0 !important; padding: 0 !important;" >
     <div class="main-body">
         <div class="banner">
-            <span>DESI TIMES</span>
+            <span>DESILAND</span>
         </div>
         <div class="order-header">
             <span>Your Order #<span th:utext="${order.reference}"></span> is <span th:utext="${status}"></span></span>
@@ -342,17 +342,17 @@
         </div>
 
         <div style="padding:5p 0x;margin:5px 0;">
-            <span>We hope to welcome you back to www.desify.co.uk soon!</span>
+            <span>We hope to welcome you back to www.desiland.co.uk soon!</span>
             <p>
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The Desify Team
+                The DESILAND Team
             </p>
         </div>
         <div style="padding:5p 0x;margin:5px 0;">
             <p>
-                ©2024-2024 Desify Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2024 DESILAND Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
