--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -150,7 +150,7 @@
 <body style="margin: 0 !important; padding: 0 !important;" >
     <div class="main-body">
         <div style="margin:30px 0;color: #ffb524;font-weight: 900;">
-            <h1>Pichai</h1>
+            <h1>Beku</h1>
         </div>
         <div class="order-header">
             <span>Your Order #<span th:utext="${order.reference}"/></span>
@@ -338,13 +338,13 @@
         </div>
 
         <div style="padding:5p 0x;margin:5px 0;">
-            <span>We hope to welcome you back to www.pichai.co.uk soon!</span>
+            <span>We hope to welcome you back to www.Beku.co.uk soon!</span>
             <span>Best Regards,</span>
             <span>The Team</span>
         </div>
         <div style="padding:10px;margin:5px 0;background-color: #f3f3f3;">
             <p>
-                ©2024-2024 pichai Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2024 Beku Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
